kubernetes/gip-app/ingress/earnie-get-active/earnie-admin-portal-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gip-admin-portal-ingress
  namespace: earnie-get-active
  annotations:
    nginx.ingress.kubernetes.io/configuration-snippet: |
      if ($http_x_forwarded_proto = 'http') {
        return 301 https://$host$request_uri;
      }
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
  - host: manage-getactive.myearnie.co.uk
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gip-admin-portal
            port:
              number: 8000
